--- a/app/views/cohorts/schedules/new.html.erb
+++ b/app/views/cohorts/schedules/new.html.erb
@@ -52,6 +52,9 @@
             <%= activity_form.label :description %>
             <%= activity_form.text_field :description, class: "form-control" %>
             <br>
+            <%= activity_form.label :reserve_room %>
+            <%= activity_form.check_box :reserve_room %>
+            <br>
             <br>
           <% end %>
         </div>
