--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -1,4 +1,5 @@
-<h1><%= @schedule.pretty_date %></h1>
+<h1>Week <%= @schedule.week %>, Day <%= @schedule.day %></h1>
+<h3><%= @schedule.pretty_date %></h3>
 
 <table class="table table-striped table-hover ">
   <thead>
@@ -31,7 +32,7 @@
   <%@schedule.labs.each do |lab| %>
 
   <li>
-    <a href="http://www.github.com/learn-co-students/<%= lab.name %>-<%= @cohort.name %>"><%= lab.name %></a>
+    <a href="http://www.github.com/learn-co-students/<%= lab.name %>-<%= @schedule.cohort.name %>"><%= lab.name %></a>
   </li>
   <%end %>
 </ul>
