--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,20 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <%= link_to "Flatiron Scheduler", root_path, class: "navbar-brand"%>
-      <!-- <a class="navbar-brand" href="#">Flatiron Scheduler</a> -->
     </div>
-
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><%= link_to "sign in with github", user_omniauth_authorize_path(:github)%></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-      </ul>
+      <% if current_user %>
+        <ul class="nav navbar-nav">
+            <li>
+              <%= link_to "cohorts", cohorts_path%>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+              <%= link_to "log out", destroy_user_session_path, method: "delete" %>
+            </li>
+        </ul>
+      <% end %>
     </div>
   </div>
 </nav>
