active user cohort user knows which cohort is its active cohort. can add or remove cohorts, switch which cohort is active. link to new schedule form for that cohort in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
             <li>
               <%= link_to "cohorts", cohorts_path%>
             </li>
+            <li>
+              <%= link_to "new schedule", new_cohort_schedule_path(current_user.active_cohort)%>
+            </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
