button to new schedule on cohort show page. logic on new shedule view--can only make new if this cohort is your active cohort

--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -7,3 +7,5 @@
     <%= link_to "week-#{s.week}, day=#{s.day}" %>
   <% end %>
 </ul>
+
+<%= link_to "new schedule", new_cohort_schedule_path(@cohort), class: "btn btn-primary" %>
