--- a/app/views/cohorts/schedules/new.html.erb
+++ b/app/views/cohorts/schedules/new.html.erb
@@ -1,23 +1,20 @@
-<h1><%= @cohort.name %> new schedule</h1>
 <% if current_user.active_cohort == @cohort%>
   <div class="col-lg-6 col-lg-offset-3">
     <div class="form-horizontal">
       <%= form_for [@cohort, @schedule] do |f| %>
+      <fieldset>
+        <legend><%= @cohort.name %> new schedule</legend>
         <div class="form-group">
           <div class="col-lg-2">
           <%= f.label :week %> 
           <%= f.number_field :week, class: "form-control" %>
           </div>
-        </div>
-
-        <div class="form-group">
+        
           <div class="col-lg-2">
             <%= f.label :day %>
             <%= f.number_field :day, class: "form-control"%>
           </div>
-        </div>
-
-        <div class="form-group">
+        
           <div class="col-lg-4">
             <%= f.label :date %>
             <%= f.date_field :date, class: "form-control" %>
@@ -25,7 +22,7 @@
         </div>
 
         <div class="form-group">
-          <div class="col-lg-5">
+          <div class="col-lg-8">
             <%= f.label :notes %>
             <%= f.text_area :notes, class: "form-control" %>
           </div>
@@ -57,12 +54,15 @@
               <%= activity_form.label :reserve_room %>
               <%= activity_form.check_box :reserve_room %>
               <br>
+              ––––––––––––––––––––––––––––––––––––––––––––
+              <br>
               <br>
             <% end %>
           </div>
         </div>
 
         <%= f.submit "Create Schedule", class: "btn btn-primary" %>
+        </fieldset>
       <% end %>
     </div>
   </div>
