remove leave cohort link, working functionality of switching your active cohort

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,10 @@
               <%= link_to "cohorts", cohorts_path%>
             </li>
             <li>
+            <% if current_user.has_cohort %>
               <%= link_to "new schedule", new_cohort_schedule_path(current_user.active_cohort)%>
             </li>
+            <% end %>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
