--- a/app/views/cohorts/_user_cohort_button.html.erb
+++ b/app/views/cohorts/_user_cohort_button.html.erb
@@ -5,7 +5,8 @@
   <% if current_user.active_cohort != cohort %>
     
     <%= link_to "make active", user_cohort_path(cohort), remote: true, method: "patch", class: "btn btn-xs btn-primary" %>
-  
+  <% else %>
+    <button class="btn btn-xs btn-info">active</button>
   <% end %>
 
 <%else %>
