passing all tests if you comment out before_action auth_user! in app controller

--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -36,3 +36,6 @@
   </li>
   <%end %>
 </ul>
+
+<a href="http://www.github.com/learn-co-curriculum/<%= @schedule.cohort.name %>" class="btn btn-primary">View Repo</a>
+
