--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @cohort.name %></h1>
+<a href="http://www.github.com/learn-co-curriculum/<%= @cohort.name %>" class="btn btn-primary">View Repo</a>
 
 <h3>Schedules</h3>
 
