--- a/app/views/cohorts/schedules/new.html.erb
+++ b/app/views/cohorts/schedules/new.html.erb
@@ -61,6 +61,13 @@
           </div>
         </div>
 
+        <div class="form-group">
+          <div class="col-lg-4">
+          <%= f.label :deploy %>
+          <%= f.check_box :deploy %>
+          </div>
+        </div>
+
         <%= f.submit "Create Schedule", class: "btn btn-primary" %>
         </fieldset>
       <% end %>
