--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -5,7 +5,9 @@
 
 <ul>
   <% @cohort.schedules.each do |s| %>
-    <%= link_to "week-#{s.week}, day=#{s.day}" %>
+    <li>
+    <%= link_to "week-#{s.week}, day-#{s.day}", cohort_schedule_path(@cohort, s) %>
+    </li>
   <% end %>
 </ul>
 
