--- a/app/views/cohorts/schedules/edit.html.erb
+++ b/app/views/cohorts/schedules/edit.html.erb
@@ -66,7 +66,7 @@
           <%= f.check_box :deploy, class: "form-control" %>
         </div>
       </div>
-      <%= f.submit "Create Schedule", class: "btn btn-primary" %>
+      <%= f.submit "Update Schedule", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
