--- a/app/views/user_cohorts/create.js.erb
+++ b/app/views/user_cohorts/create.js.erb
@@ -1,2 +1,6 @@
-$("#cohort-" + <%= @former_active.id %>).html("<%= j render(partial: 'cohorts/user_cohort_button', locals: {cohort: @former_active}) %>")
-$("#cohort-" + <%= @cohort.id %>).html("<%= j render(partial: 'cohorts/user_cohort_button', locals: {cohort: @cohort}) %>")
+<% if @former_active %>
+  $("#cohort-" + <%= @former_active.id %>).html("<%= j render(partial: 'cohorts/user_cohort_button', locals: {cohort: @former_active}) %>")
+  $("#cohort-" + <%= @cohort.id %>).html("<%= j render(partial: 'cohorts/user_cohort_button', locals: {cohort: @cohort}) %>")
+<% else %>
+  $("#cohort-" + <%= @cohort.id %>).html("<%= j render(partial: 'cohorts/user_cohort_button', locals: {cohort: @cohort}) %>")
+<% end %>
