start and end time added to activities, google client configured for calendar, reserver room button working sends reservations to google calendar but need to make it the correct calendar, not users' primary calendar, also times are off by 4 hours

--- a/app/views/cohorts/schedules/edit.html.erb
+++ b/app/views/cohorts/schedules/edit.html.erb
@@ -46,8 +46,10 @@
           <%= f.label :activities %>
           <br>
           <%= f.fields_for :activities, @schedule.activities do |activity_form|%>
-            <%= activity_form.label :time %>
-            <%= activity_form.time_field :time, class: "form-control" %>
+            <%= activity_form.label :start_time %>
+            <%= activity_form.time_field :start_time, class: "form-control" %>
+            <%= activity_form.label :end_time %>
+            <%= activity_form.time_field :end_time, class: "form-control" %>
             <br>
             <%= activity_form.label :description %>
             <%= activity_form.text_field :description, class: "form-control" %>
