--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -13,4 +13,5 @@
 
 <%= link_to "new schedule", new_cohort_schedule_path(@cohort), class: "btn btn-primary" %>
 
-<%= link_to "edit", edit_cohort_path(@cohort), id: "edit" %>
+<%= link_to "edit", edit_cohort_path(@cohort), id: "edit", class: "btn btn-primary" %>
+
