add edit button to schedule page, make day, week and date of schedule non-editable

--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -52,6 +52,6 @@
 
 <%= link_to "reserve rooms", cohort_schedule_reserve_path(@schedule.cohort, @schedule), method: "post", id: "edit", class: "btn btn-primary" %>
 
-<%= link_to "reserve rooms", edit_cohort_schedule_path(@schedule.cohort, @schedule), method: "post", id: "edit", class: "btn btn-primary" %>
+<%= link_to "edit schedule", edit_cohort_schedule_path(@schedule.cohort, @schedule), id: "edit", class: "btn btn-primary" %>
 
 <br>
