--- a/app/views/cohorts/schedules/edit.html.erb
+++ b/app/views/cohorts/schedules/edit.html.erb
@@ -4,21 +4,22 @@
       <div class="form-group">
         <div class="col-lg-2">
         <%= f.label :week %> 
-        <%= f.number_field :week, class: "form-control" %>
+        <p class="form-control"><%= @schedule.week %></p>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-lg-2">
           <%= f.label :day %>
-          <%= f.number_field :day, class: "form-control"%>
+         <p class="form-control"><%= @schedule.day %></p>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-lg-4">
           <%= f.label :date %>
-          <%= f.date_field :date, class: "form-control" %>
+          <p class="form-control"><%= @schedule.pretty_date %></p>
+          
         </div>
       </div>
 
@@ -63,9 +64,9 @@
       </div>
 
       <div class="form-group">
-        <div class="col-lg-5">
+        <div class="col-lg-2">
           <%= f.label :deploy %>
-          <%= f.check_box :deploy, class: "form-control" %>
+          <%= f.check_box :deploy %>
         </div>
       </div>
       <%= f.submit "Update Schedule", class: "btn btn-primary" %>
