--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -1,57 +1,108 @@
-<h1>Week <%= @schedule.week %>, Day <%= @schedule.day %></h1>
-<h3><%= @schedule.pretty_date %></h3>
+<div class="schedule-title">
+  <h1>Week <%= @schedule.week %>, Day <%= @schedule.day %></h1>
+  <h4><%= @schedule.pretty_date %></h4>
+</div>
 
-<table class="table table-striped table-hover ">
-  <thead>
-    <tr>
-      <th>Time</th>
-      <th>Activity</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @schedule.activities.each do |activity|  %>
-    <tr>
-      <td><%= activity.start_hour %></td>
-      <td><%= activity.description %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<div class="row schedule-container">
+  <div class="schedule-table col-md-5">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Time</th>
+          <th>Activity</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @schedule.activities.each do |activity|  %>
+        <tr>
+          <td><%= activity.start_hour %></td>
+          <td><%= activity.description %></td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
 
-<!-- NOTES -->
-<% if !@schedule.notes.empty? %>
-  <h3>Notes</h3>
-    <p>
-      <%= @schedule.notes %>
-    </p>
-<% end %>
+  <!-- DEPLOYMENT HISTORY -->
+  <div class="deploy-history col-md-5">
+    <div class="deployed">
+      <strong>Schedule Last Deployed:</strong><br><br>
+      <p>not yet deployed/yesterday</p>
+      <%= link_to "deploy schedule", cohort_schedule_deploy_path(@schedule.cohort, @schedule), method: "post", remote: true, class: "btn btn-primary" %>
+    </div>
+    <div class="reserved">
+    <strong>Room Reservations:</strong>
+      <% if !@schedule.calendar_events.empty? %>
+      <p>
+        <ul class="activity-list">
+          <% @schedule.calendar_events.each do |event| %>
+            <li><strong><%= event.name %></strong></li>
+            <li>location: <%= event.location %></li>
+            <li>reserved at: <%= event.reserved_at %></li>
+            <li>reserved by: <%= event.reserved_by %></li>
+          <% end %>
+        </ul>
+      </p>
+      <% else %>
+        <p>rooms not yet reserved</p>
+      <% end %>
+       <%= link_to "reserve rooms", cohort_schedule_reserve_path(@schedule.cohort, @schedule), method: "post", id: "edit", class: "btn btn-primary" %>
+    </div>
+  </div>
+
+</div>
+
+<div class="row schedule-info">
+
+  <% if !@schedule.notes.empty? %>
+      <h3>Notes</h3>
+        <p>
+          <%= @schedule.notes %>
+        </p>
+    <% end %>
+
+</div>
+
 
 <!-- OBJECTIVES -->
-<% if !@schedule.objectives.empty? %>
-  <h3>Objectives</h3>
-    <p>
-      <% @schedule.objectives.each do |objective| %>
-        <%= objective.content %>
-      <% end %>
-    </p>
-<% end %>
+<div class="row schedule-info">
+
+  <% if !@schedule.objectives.empty? %>
+    <h3>Objectives</h3>
+      <p>
+        <% @schedule.objectives.each do |objective| %>
+          <%= objective.content %>
+        <% end %>
+      </p>
+  <% end %>
+
+</div>
+
+<!-- LABS -->
+<div class="row schedule-info">
 
 <h3>Labs</h3>
-<ul>
-  <%@schedule.labs.each do |lab| %>
+  <ul>
+    <%@schedule.labs.each do |lab| %>
 
-  <li>
-    <a href="http://www.github.com/learn-co-students/<%= lab.name %>-<%= @schedule.cohort.name %>"><%= lab.name %></a>
-  </li>
-  <%end %>
-</ul>
+    <li>
+      <a href="http://www.github.com/learn-co-students/<%= lab.name %>-<%= @schedule.cohort.name %>"><%= lab.name %></a>
+    </li>
+    <%end %>
+  </ul>
 
-<%= link_to "deploy schedule", cohort_schedule_deploy_path(@schedule.cohort, @schedule), method: "post", remote: true, class: "btn btn-primary" %>
+</div>
 
-<a href="http://www.github.com/learn-co-curriculum/<%= @schedule.cohort.name %>" class="btn btn-primary">View Repo</a>
+<!-- BUTTONS -->
 
-<%= link_to "reserve rooms", cohort_schedule_reserve_path(@schedule.cohort, @schedule), method: "post", id: "edit", class: "btn btn-primary" %>
+<div class="row schedule-info">
 
-<%= link_to "edit schedule", edit_cohort_schedule_path(@schedule.cohort, @schedule), id: "edit", class: "btn btn-primary" %>
+  <a href="http://www.github.com/learn-co-curriculum/<%= @schedule.cohort.name %>" class="btn btn-primary">View Repo</a>
 
-<br>
+
+
+  <%= link_to "edit schedule", edit_cohort_schedule_path(@schedule.cohort, @schedule), id: "edit", class: "btn btn-primary" %>
+
+</div>
+  <br>
+  </br>
