--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,9 @@
             <li>
               <%= link_to "cohorts", cohorts_path%>
             </li>
-            <li>
-            <% if current_user.has_cohort %>
-              <%= link_to "new schedule", new_cohort_schedule_path(current_user.active_cohort)%>
+            <li id="new-schedule">
+              <%= render partial: "layouts/new_schedule_link" %>
             </li>
-            <% end %>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
