changed theme, styled cohort index page and new schedule page

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -46,3 +46,12 @@
   list-style: none
 }
 
+#cohort-index {
+  list-style: none;
+}
+
+#cohort-index > li {
+  font-size: 25px;
+  padding-top: 10px;
+}
+
