styled new schedule form, cohort show page

--- a/app/views/cohorts/new.html.erb
+++ b/app/views/cohorts/new.html.erb
@@ -1,5 +1,16 @@
-<%= form_for @cohort do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.submit "Create Cohort" %>
-<% end %>
+<div style="text-align: center;">
+    <h1>Add your cohort</h1>
+    <div class="alert alert-dismissible alert-success">
+    <p>cohort name should match the name of the cohort's GitHub repo.</p>
+    <p>for example, if the cohort's repo '/learn-co-curriculu/web-1115',</p>
+    <p>name your cohort 'web-1115'</p>
+  </div>
+    <div class="form-horizontal">
+      <%= form_for @cohort do |f| %>
+        <h4>Cohort Name</h4>
+        <%= f.text_field :name, class: "form-control" %>
+        <%= f.submit "Create Cohort", class: "btn btn-primary", style: "width: 100%; margin-top: 20px" %>
+      <% end %>
+    </div>  
+  </div>
+</div>
