--- a/app/views/cohorts/schedules/new.html.erb
+++ b/app/views/cohorts/schedules/new.html.erb
@@ -67,8 +67,8 @@
               <%= activity_form.label :reserve_room %>
               <%= activity_form.check_box :reserve_room %>
               <br>
-              ––––––––––––––––––––––––––––––––––––––––––––
               <br>
+              <div style="border-bottom: solid; border-width: 1px"></div>
               <br>
             <% end %>
           </div>
