--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -55,3 +55,38 @@
   padding-top: 10px;
 }
 
+.cohort-list > ul {
+  margin-left: 0px;
+  padding-left: 0px;
+}
+
+.cohort-list {
+  border-style: solid;
+  border-width: 1px;
+  margin-top: 20px;
+}
+
+#cohort-index-title {
+  text-align: center;
+}
+
+.cohort-btn {
+  height: 30px;
+  width: 100px;
+  margin-left: 29%;
+}
+
+ul > #active-cohort-btn:hover {
+  color: #ffffff;
+  background-color: #9954bb;
+  border-color: #9954bb;
+}
+
+#add-cohort {
+  width: 33%;
+}
+
+.cohort-show-btn {
+  margin-bottom: 15px;
+}
+
