--- a/app/views/cohorts/index.html.erb
+++ b/app/views/cohorts/index.html.erb
@@ -1,9 +1,10 @@
 <div class="row">
-  <div class="well">
+  <div id="cohort-index-title">
+    <h1>Cohorts</h1>  
+    <%= link_to "add cohort", new_cohort_path, class: 'btn btn-primary', id: 'add-cohort' %></h1>
+  </div>
+  <div class="cohort-list col-md-4 col-md-offset-4">
     <ul id="cohort-index">
-    <div>
-      <h1>Cohorts  <%= link_to "add cohort", new_cohort_path, class: 'btn btn-primary' %></h1>
-    </div>
       <% @cohorts.each do |c| %>
         <li class="" id="cohort-<%= c.id %>">
          <%= render partial: 'cohorts/user_cohort_button', locals: {cohort: c} %>
