--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -90,3 +90,9 @@ ul > #active-cohort-btn:hover {
   margin-bottom: 15px;
 }
 
+.cohort-warning {
+  margin-top: 10%;
+  text-align: center;
+  font-size: 20px;
+}
+
