--- a/app/views/cohorts/edit.html.erb
+++ b/app/views/cohorts/edit.html.erb
@@ -4,7 +4,7 @@
       <%= form_for @cohort do |f| %>
         <h4>Cohort Name</h4>
         <%= f.text_field :name, class: "form-control", id: "Name" %>
-        <h4>Calendar ID</h4>
+        <h4 data-container="body" data-toggle="popover" data-placement="bottom" data-content="To obtain the calendar id of your cohort's calendar, go to the Flatiron School calendar settings and select the calendar for your cohort. The calendar ID is found in the 'calendar address' field.">Calendar ID*</h4>
         <%= f.text_field :calendar_id, class: "form-control", id: "calendar-id" %>
         <%= f.submit "Edit Cohort", class: "btn btn-primary", style: "width: 100%; margin-top: 20px" %>
       <% end %>
@@ -12,9 +12,3 @@
   </div>
 </div>
 
-<div class="container">
- 
-
-<!--  -->
-<button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus
-sagittis lacus vel augue laoreet rutrum faucibus." data-original-title="" title="">Bottom</button>
