--- a/app/views/cohorts/new.html.erb
+++ b/app/views/cohorts/new.html.erb
@@ -10,6 +10,11 @@
         <h4>Cohort Name</h4>
         <%= f.text_field :name, class: "form-control", id: "Name" %>
         <%= f.submit "Create Cohort", class: "btn btn-primary", style: "width: 100%; margin-top: 20px" %>
+
+        <h4>Upload Cohort CSV</h4>
+        <%= f.label :roster_csv %>
+        <%= f.file_field :roster_csv %>
+    </div>
       <% end %>
     </div>  
   </div>
