--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -25,8 +25,9 @@
 
   <!-- DEPLOYMENT HISTORY -->
   <div class="deploy-history col-md-5">
-      <strong>Schedule Last Deployed:</strong><br><br>
+      <strong>Schedule Last Deployed:</strong>
       <div id="deployment-history">
+        <br><br>
         <%= render partial: "cohorts/schedules/deploy_history", locals: {schedule: @schedule} %>
       </div>
       <%= link_to "deploy schedule", cohort_schedule_deploy_path(@schedule.cohort, @schedule), method: "post", remote: true, id: "deploy", class: "btn btn-primary" %>
