fix log around displaying github wrapper error

--- a/app/views/cohorts/schedules/_deploy_history.html.erb
+++ b/app/views/cohorts/schedules/_deploy_history.html.erb
@@ -1,4 +1,4 @@
-<% if github_wrapper %>
+<% if github_wrapper && github_wrapper.error %>
   <p><strong>error: </strong><%= github_wrapper.error.message %></p>
 <% elsif schedule.deployed? %>
   <p><%= schedule.deployed_on.strftime("%A, %d %b %Y") %></p>
