--- a/app/views/cohorts/new.html.erb
+++ b/app/views/cohorts/new.html.erb
@@ -9,13 +9,18 @@
       <%= form_for @cohort do |f| %>
         <h4>Cohort Name</h4>
         <%= f.text_field :name, class: "form-control", id: "Name" %>
-        <%= f.submit "Create Cohort", class: "btn btn-primary", style: "width: 100%; margin-top: 20px" %>
 
-        <h4>Upload Cohort CSV</h4>
-        <%= f.label :roster_csv %>
-        <%= f.file_field :roster_csv %>
-    </div>
+        <h4 data-container="body" data-toggle="popover" data-placement="bottom" data-content="To download the csv roster for your cohort, visit the cohort's organization on learn.co and click the 'download csv roster' button">Upload Roster CSV*</h4>
+            <div class="form-group">
+              <span class="btn btn-success btn-file">
+                <%= f.label :upload_csv %>
+                <%= f.file_field :roster_csv %>
+              </span>
+            </div>
+        
+        <%= f.submit "Create Cohort", class: "btn btn-primary", style: "width: 100%; margin-top: 20px" %>
       <% end %>
+    </div>
     </div>  
   </div>
 </div>
