--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application'%>
+    <%= favicon_link_tag 'flatiron_school_slashes_transparent_background.png' %>
   </head>
 
   <nav class="navbar navbar-inverse">
