--- a/app/views/cohorts/new.html.erb
+++ b/app/views/cohorts/new.html.erb
@@ -1,26 +1,17 @@
 <div style="text-align: center;">
-    <h1>Add your cohort</h1>
-    <div class="alert alert-dismissible alert-success">
+  
+  <h1>Add your cohort</h1>
+  <div class="alert alert-dismissible alert-success">
     <p>cohort name should match the name of the cohort's GitHub repo.</p>
     <p>for example, if the cohort's repo '/learn-co-curriculu/web-1115',</p>
     <p>name your cohort 'web-1115'</p>
   </div>
-    <div class="form-horizontal">
-      <%= form_for @cohort do |f| %>
-        <h4>Cohort Name</h4>
-        <%= f.text_field :name, class: "form-control", id: "Name" %>
-
-        <h4 data-container="body" data-toggle="popover" data-placement="bottom" data-content="To download the csv roster for your cohort, visit the cohort's organization on learn.co and click the 'download csv roster' button">Upload Roster CSV*</h4>
-            <div class="form-group">
-              <span class="btn btn-success btn-file">
-                <%= f.label :upload_csv %>
-                <%= f.file_field :roster_csv %>
-              </span>
-            </div>
-        
-        <%= f.submit "Create Cohort", class: "btn btn-primary", style: "width: 100%; margin-top: 20px" %>
-      <% end %>
-    </div>
-    </div>  
+  
+  <div class="form-horizontal">
+    <%= form_for @cohort do |f| %>
+      <%= render partial: 'form_fields', locals: {f: f} %>
+      <%= f.submit "Create Cohort", class: "btn btn-primary", style: "width: 100%; margin-top: 20px" %>
+    <% end %>
   </div>
-</div>
+</div>  
+
