--- a/app/views/cohorts/schedules/edit.html.erb
+++ b/app/views/cohorts/schedules/edit.html.erb
@@ -1,78 +1,17 @@
-<div class="col-lg-6 col-lg-offset-3">
-  <div class="form-horizontal">
-    <%= form_for [@cohort, @schedule] do |f| %>
-      <div class="form-group">
-        <div class="col-lg-2">
-        <%= f.label :week %> 
-        <p class="form-control"><%= @schedule.week %></p>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-lg-2">
-          <%= f.label :day %>
-         <p class="form-control"><%= @schedule.day %></p>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-lg-4">
-          <%= f.label :date %>
-          <p class="form-control"><%= @schedule.pretty_date %></p>
-          
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-lg-5">
-          <%= f.label :notes %>
-          <%= f.text_area :notes, class: "form-control" %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-lg-4">
-          <%= f.label :labs %>
-          <%= f.fields_for :labs, @schedule.labs do |lab_form|%>
-             <br>
-            <%= lab_form.label :name %>
-            <%= lab_form.text_field :name, class: "form-control" %>
-            <br>
-          <% end %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-lg-4">
-          <%= f.label :activities %>
-          <br>
-          <%= f.fields_for :activities, @schedule.activities do |activity_form|%>
-            <%= activity_form.label :start_time %>
-            <%= activity_form.time_field :start_time, class: "form-control" %>
-            <%= activity_form.label :end_time %>
-            <%= activity_form.time_field :end_time, class: "form-control" %>
-            <br>
-            <%= activity_form.label :description %>
-            <%= activity_form.text_field :description, class: "form-control" %>
-            <br>
-            <%= activity_form.label :reserve_room %>
-            <%= activity_form.check_box :reserve_room %>
-            <br>
-            <br>
-          <% end %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-lg-2">
-          <%= f.label :deploy %>
-          <%= f.check_box :deploy %>
-        </div>
-      </div>
-      <%= f.submit "Update Schedule", class: "btn btn-primary" %>
-    <% end %>
+<% if current_user.active_cohort == @cohort%>
+  <div class="col-lg-6 col-lg-offset-3">
+    <div class="form-horizontal">
+      <%= form_for [@cohort, @schedule] do |f| %>
+        <%= render partial: "cohorts/schedules/form_fields/form_fields", locals: {f: f, cohort: @cohort, schedule: @schedule} %>
+        <%= f.submit "Update Schedule", class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
-</div>
+<% else %>
+  <div class="alert alert-dismissible alert-danger cohort-warning">
+    Sorry, you can only edit a schedule for your active cohort. To make <%= @cohort.name %> your active cohort, visit the <%= link_to "cohort's index page", cohorts_path %> and click the "make active cohort" button.
+  </div>
+<% end %>
 
 
 
