--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -5,22 +5,7 @@
 
 <div class="row schedule-container">
   <div class="schedule-table col-md-5">
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th>Time</th>
-          <th>Activity</th>
-        </tr>
-      </thead>
-      <tbody>
-      <% @schedule.activities.each do |activity|  %>
-        <tr>
-          <td><%= activity.start_hour %></td>
-          <td><%= activity.description %></td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
+    <%= render partial: "cohorts/schedules/schedule_table", locals: {schedule: @schedule} %>
   </div>
 
   <!-- DEPLOYMENT HISTORY -->
@@ -46,18 +31,7 @@
 <!-- BLOGS -->
 <div class="row schedule-info">
 
-  <% if !@schedule.blog_assignments.empty? %>
-      <h3>Blogs</h3>
-        <p>
-          <ul>
-            <% @schedule.blog_assignments.each do  |blog_assignment| %>
-               <li>
-                  <a href="<%= blog_assignment.student.blog_url %>"><%= blog_assignment.student.full_name %></a>
-                </li>
-            <% end %>
-          </ul>
-        </p>
-    <% end %>
+  <%= render partial: 'cohorts/schedules/schedule_blogs', locals: {schedule: @schedule} %>
 
 </div>
 
@@ -65,12 +39,7 @@
 <!-- NOTES -->
 <div class="row schedule-info">
 
-  <% if !@schedule.notes.empty? %>
-      <h3>Notes</h3>
-        <p>
-          <%= @schedule.notes %>
-        </p>
-    <% end %>
+  <%= render partial: 'cohorts/schedules/schedule_notes', locals: {schedule: @schedule} %>
 
 </div>
 
@@ -78,17 +47,7 @@
 <!-- OBJECTIVES -->
 <div class="row schedule-info">
 
-  <% if !@schedule.objectives.empty? %>
-    <h3>Objectives</h3>
-      <p>
-      <ul>
-        <% @schedule.objectives.each do |objective| %>
-        <li>
-          <%= objective.content %>
-        </li>
-        <% end %>
-      </p>
-  <% end %>
+  <%= render partial: 'cohorts/schedules/schedule_objectives', locals: {schedule: @schedule} %>
 
 </div>
 
@@ -96,14 +55,7 @@
 <div class="row schedule-info">
 
 <h3>Labs</h3>
-  <ul>
-    <%@schedule.labs.each do |lab| %>
-
-    <li>
-      <a href="http://www.github.com/learn-co-students/<%= lab.name %>-<%= @schedule.cohort.name %>"><%= lab.name %></a>
-    </li>
-    <%end %>
-  </ul>
+  <%= render partial: 'cohorts/schedules/schedule_labs', locals: {schedule: @schedule} %>
 
 </div>
 
