view helpers for schedule blogs, notes, labs and objectives and for current user's active cohort remove if/else complex method calls into view helpers

--- a/app/views/cohorts/schedules/edit.html.erb
+++ b/app/views/cohorts/schedules/edit.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.active_cohort == @cohort%>
+<% if current_user_active_cohort(@cohort)%>
   <div class="col-lg-6 col-lg-offset-3">
     <div class="form-horizontal">
       <%= form_for [@cohort, @schedule] do |f| %>
